# gif

./: CMakeLists.txt  LICENSE
CMake/: FindNIFTYREG.cmake  FindNIFTYSEG.cmake
Code/: CMakeLists.txt
Code/Applications/: CMakeLists.txt  seg_CT_Colon.cpp  seg_CT_Lung.cpp  seg_CalcTopNCC.cpp  seg_DTI_seed.cpp  seg_Denoise.cpp  seg_DetectSulci.cpp  seg_GIF.cpp  seg_GetLayers.cpp  seg_MSVBM.cpp  seg_MSVBM_Compare.cpp  seg_PBSI.cpp  seg_Protocol.cpp
Code/Libraries/: CMakeLists.txt  _seg_GIF.cpp  _seg_GIF.cpp7  _seg_GIF.h
Code/Scripts/: gifclusterjob.py  gifclusterutils.py  gifmetascript.py  gifutils.py
Utilities/: CMakeLists.txt
Utilities/rapidxml/: CMakeLists.txt  rapidxml.hpp  rapidxml_print.hpp
